<resources>
    <string name="app_name">MyBands</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Iniciar Sesión</string>
    <string name="action_sign_in_short">Iniciar Sesión</string>
    <string name="error_invalid_email">La dirección email es inválida</string>
    <string name="error_invalid_password">Contraseña muy corta</string>
    <string name="error_incorrect_password">Contraseña Incorrecta</string>
    <string name="error_field_required">Campo requerido</string>
    <string name="permission_rationale">"Permisos de contactos son necesarios para autocompletado de
        emails."
        </string>
    <string name="title_activity_login">IniciarSesión</string>
    <string name="new_client_label">¿Nuevo en MyBands?</string>
    <string name="action_register">Registrarse</string>

    <!-- Strings related to register -->
    <string name="register_title">Registro</string>>
    <string name="prompt_name">Nombre</string>

    <!-- Strings related to Administrator's Home -->
    <string name="administrator_home_title">Bienvenido</string>

    <!-- Strings related to Client's Home -->
    <string name="titleClientHome">Bienvenido</string>
    <string name="titleArtistHome">Bienvenido!</string>
    <string name="add_news">Agregar Noticia</string>
    <string name="action_visit_store">Visitar la tienda</string>
    <string name="action_incoming_events">Próximos Eventos</string>
    <string name="action_exit">Salir</string>

</resources>
